<resources>
    <string name="app_name">Quản lý chi tiêu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tien_chi">Tiền chi</string>
    <string name="tien_thu">Tiền thu</string>
    <string name="date">Ngày</string>
    <string name="note">Ghi chú</string>
    <string name="amount">Số tiền</string>
    <string name="verify">Xác nhận</string>
    <string name="thu_chi">Thu - chi</string>
    <string name="tong_thu">Tổng thu</string>
    <string name="tong_chi">Tổng chi</string>
    <string name="chi">Chi</string>
    <string name="thu">Thu</string>
    <string name="lich">Lịch</string>
    <string name="giao_dich">Giao dịch</string>
    <string name="filter">Lọc</string>
    <string name="setting">Cài đặt</string>
    <string name="report">Báo cáo</string>
    <string name="clear_data"> Xóa dữ liệu</string>
    <string name="edit_category">Chỉnh sửa danh mục</string>
    <string name="clear_all_message">Bạn có chắc chắn muốn xóa toàn bộ dữ liệu không? Thao tác này không thể hoàn tác.</string>
    <string name="add_category">Thêm danh mục</string>
    <string name="category_name">Tên danh mục</string>
    <string name="add">Thêm</string>
</resources>