<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.SettingFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:paddingHorizontal="8dp"
        android:paddingVertical="4dp"
        android:text="@string/setting"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_clear_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/clear_data"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_bin" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:id="@+id/edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp"
        android:text="@string/edit_category"
        android:textSize="20sp"
        app:drawableStartCompat="@drawable/ic_pencil_pink" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp" />

</LinearLayout>