<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddCategoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="4dp">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/round_arrow_back_ios_new_24" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_category"
            android:textSize="26sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:autofillHints=""
        android:backgroundTint="@color/light_salmon_pink"
        android:hint="@string/category_name"
        android:paddingVertical="8dp"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_icon"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        tools:listitem="@layout/item_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginVertical="16dp"
        android:background="@drawable/bg_button"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>