<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    tools:context=".ui.ChartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_common"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:textColor="@color/boulder"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tv_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_common"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:textColor="@color/boulder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_filter"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_common"
            android:backgroundTint="@color/light_salmon_pink"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/filter"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="@drawable/bg_common"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/chi"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_expense"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="end"
                android:textColor="@color/light_red"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/bg_common"
            android:orientation="horizontal"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/thu"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_income"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:gravity="end"
                android:textColor="@color/green"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_common"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:text="@string/thu_chi"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_balance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:paddingEnd="4dp"
            android:textColor="@color/topaz"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <com.example.expensemanagement.ui.custom.DoughnutChartView
        android:id="@+id/percent_chart"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_category"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@color/light_red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tien_chi"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/bg_category"
            android:gravity="center_vertical|end">

            <ImageView
                android:id="@+id/iv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@color/green" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tien_thu"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_forward" />

        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:listitem="@layout/item_category_amount" />

</LinearLayout>